--- a/index.html
+++ b/index.html
@@ -135,6 +135,18 @@
   }
   .sidebar.show { left: 0; }
 
+.sidebar-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.3);
+  z-index: 2000;
+  display: none;
+}
+.sidebar-overlay.show {
+  display: block;
+}
+
   /* トップバーに≡ボタン */
   .menu-toggle {
     display:inline-block;
@@ -171,31 +183,33 @@
     margin:0;
   }
 
-  /* 右下の新規ボタン */
-  .fab {
-    position: fixed; 
-    bottom:16px; 
-    right:16px;
-    width:48px; height:48px; 
-    border-radius:50%;
-    background:#ffd400; 
-    color:black;
-    font-size:24px; 
-    font-weight:bold;
-    display:flex; 
-    align-items:center; 
-    justify-content:center;
-    box-shadow:0 2px 6px rgba(0,0,0,.3);
-    z-index:2600;
-    border:none;
-    cursor:pointer;
-  }
+/* ===== モバイル新規ボタン ===== */
+.fab {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: none;
+  background: #6ec6ff; /* パステルブルー */
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  cursor: pointer;
+  transition: background 0.3s;
+  z-index: 3000;
+}
+.fab:hover {
+  background: #82d4ff; /* hover時に少し濃く */
+}
 
-  /* モバイル用エディタ幅調整 */
-  .mobile-editor {
-    width:100% !important;
-    max-width:100% !important;
-  }
+/* ===== はみ出し防止 ===== */
+.note, .mobile-editor, .editor-content,
+input, textarea, select {
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
 </style>
@@ -237,6 +251,10 @@
     <div id="list"></div>
   </div>
 </div>
+
+<!-- ===== サイドバーしまう用 ===== -->
+<div id="sidebarOverlay" class="sidebar-overlay" onclick="toggleCats()"></div>
+
 
 <!-- ===== PC用モーダル ===== -->
 <div id="dlg">
@@ -317,6 +335,13 @@ function renderCategories(){
   });
   var sel=document.getElementById("fCat");sel.innerHTML="";categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;sel.appendChild(o);});
   var msel=document.getElementById("mCat");msel.innerHTML="";categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;msel.appendChild(o);});
+}
+/* ===== トグル閉じる ===== */
+function toggleCats(){
+  const sidebar = document.querySelector(".sidebar");
+  const overlay = document.getElementById("sidebarOverlay");
+  sidebar.classList.toggle("show");
+  overlay.classList.toggle("show");
 }
 
 /* ===== カテゴリ操作 ===== */
