--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   body.light { background:#f0f4f8; color:#2a3a50; }
   body.dark  { background:#0f1115; color:#e8edf5; }
 
+  /* ===== サイドバーしまう ===== */
+.sidebar-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.3);
+  z-index: 2000; /* サイドバーのすぐ下 */
+  display: none;
+}
+.sidebar-overlay.show {
+  display: block;
+}
+
+
   /* ===== ヘッダー ===== */
   .topbar {
     background:#4a90e2; color:#fff;
@@ -135,18 +149,6 @@
   }
   .sidebar.show { left: 0; }
 
-.sidebar-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.3);
-  z-index: 2000;
-  display: none;
-}
-.sidebar-overlay.show {
-  display: block;
-}
-
   /* トップバーに≡ボタン */
   .menu-toggle {
     display:inline-block;
@@ -192,7 +194,7 @@
   height: 56px;
   border-radius: 50%;
   border: none;
-  background: #6ec6ff; /* パステルブルー */
+  background: #2a3a50 ;
   color: #fff;
   font-size: 28px;
   font-weight: bold;
@@ -209,7 +211,7 @@
 .note, .mobile-editor, .editor-content,
 input, textarea, select {
   box-sizing: border-box;
-  max-width: 100%;
+  max-width: 90%;
 }
 
 </style>
@@ -219,7 +221,7 @@ input, textarea, select {
 <div class="topbar">
   <div class="topbar-inner">
     <div class="topbar-title">
-  <span class="menu-toggle" onclick="toggleSidebar()">≡</span>Notes
+  <span class="menu-toggle" onclick="toggleCats()">≡</span>Notes
 </div>
     <div class="topbar-actions">
       <button class="btn" onclick="toggleInfo()">info</button>
@@ -252,10 +254,6 @@ input, textarea, select {
   </div>
 </div>
 
-<!-- ===== サイドバーしまう用 ===== -->
-<div id="sidebarOverlay" class="sidebar-overlay" onclick="toggleCats()"></div>
-
-
 <!-- ===== PC用モーダル ===== -->
 <div id="dlg">
   <div id="dlgHeader">ノート編集</div>
@@ -287,6 +285,10 @@ input, textarea, select {
 </div>
 <!-- モバイル新規ボタン -->
 <button class="fab" onclick="openMobileEditor()">＋</button>
+
+<!-- ===== サイドバーしまう用 ===== -->
+<div id="sidebarOverlay" class="sidebar-overlay" onclick="toggleCats()"></div>
+
 <script>
 var notes=[],current=null,categories=[],theme=(function(){try{return localStorage.getItem("theme")||"light";}catch(e){return"light";}})(),currentCategory="all",selectedIds=new Set();
 
@@ -337,12 +339,18 @@ function renderCategories(){
   var msel=document.getElementById("mCat");msel.innerHTML="";categories.forEach(cat=>{var o=document.createElement("option");o.value=cat;o.textContent=cat;msel.appendChild(o);});
 }
 /* ===== トグル閉じる ===== */
-function toggleCats(){
+function toggleCats() {
   const sidebar = document.querySelector(".sidebar");
   const overlay = document.getElementById("sidebarOverlay");
-  sidebar.classList.toggle("show");
-  overlay.classList.toggle("show");
+  const isOpen = sidebar.classList.toggle("show");
+  if (isOpen) {
+    overlay.classList.add("show");
+  } else {
+    overlay.classList.remove("show");
+  }
 }
+
+
 
 /* ===== カテゴリ操作 ===== */
 function setCategory(cat){currentCategory=cat;render();}
@@ -456,10 +464,6 @@ function debugCheck() {
   } else {
     alert("class: " + el.className);
   }
-}
-
-function toggleSidebar(){
-  document.querySelector('.sidebar').classList.toggle('show');
 }
 
 // モバイル新規作成時は横幅100%のエディタを使う
