--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@
   z-index: 3000;
 }
 .fab:hover {
-  background: #82d4ff; /* hover時に少し濃く */
+  background: #a90e2; /* hover時に少し濃く */
 }
 
 /* ===== はみ出し防止 ===== */
 .note, .mobile-editor, .editor-content,
 input, textarea, select {
   box-sizing: border-box;
-  max-width: 90%;
+  max-width: 100%;
 }
 
 </style>
