--- a/index.html
+++ b/index.html
@@ -111,27 +111,61 @@
   }
   .modal-footer { text-align:right; }
 
-  /* ===== モバイル用スライドイン ===== */
-  .mobile-editor {
-    position: fixed; top:0; left:100%;
-    width:100%; height:100%;
-    background:#fff; transition:left 0.3s ease;
-    z-index:3000; display:flex; flex-direction:column;
-  }
-  .mobile-editor.show { left:0; }
-  .editor-header {
-    display:flex; justify-content:space-between; align-items:center;
-    padding:12px; background:#4a90e2; color:#fff; font-weight:bold;
-  }
-  .editor-header button {
-    background:#fff; border:none; border-radius:4px; padding:4px 8px;
-  }
-  .editor-content {
-    flex:1; padding:12px; overflow-y:auto;
-  }
-  .editor-content input, .editor-content textarea, .editor-content select {
-    width:100%; margin-bottom:10px; padding:8px; border:1px solid #ccc; border-radius:6px;
-  }
+ /* ===== モバイル用エディタ ===== */
+.mobile-editor {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  background: #fff;  /* 本文は白 */
+  transition: left 0.3s ease;
+  z-index: 3000;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+}
+
+.mobile-editor.show { left: 0; }
+
+/* ヘッダー（青） */
+.mobile-editor .editor-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  background: #4a90e2;
+  color: #fff;
+  font-weight: bold;
+}
+
+.mobile-editor .editor-header button {
+  background: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 4px 8px;
+}
+
+/* 本文（白） */
+.mobile-editor .editor-content {
+  flex: 1;
+  padding: 16px;
+  overflow-y: auto;
+  background: #fff;  /* ここを明示 */
+  box-sizing: border-box;
+}
+
+.mobile-editor .editor-content input,
+.mobile-editor .editor-content textarea,
+.mobile-editor .editor-content select {
+  width: 100%;
+  margin-bottom: 12px;
+  padding: 10px;
+  border: 1px solid #cfd8e3;
+  border-radius: 6px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
 
 /* ===== モバイルレイアウト調整 ===== */
 @media screen and (max-width:600px) {
@@ -230,13 +264,13 @@ input, textarea, select {
       <input type="file" id="importFile" style="display:none" onchange="importNotes(event)">
       <button class="btn" onclick="document.getElementById('importFile').click()">in</button>
       <button class="btn btn-danger" onclick="deleteSelected()">del</button>
-      <button class="btn btn-primary" onclick="openEditor(null); debugCheck()">新規</button>
+      <button class="btn btn-primary" onclick="openEditor(null); debugCheck()">＋</button>
     </div>
   </div>
 </div>
 
 <!-- 情報＆検索 -->
-<div id="infoPanel">右上の「新規」でノート作成できます。チェックをつけて「del」で一括削除できます。</div>
+<div id="infoPanel">右上の「＋」でノート作成できます。チェックをつけて「del」で一括削除できます。</div>
 <div id="filterPanel"><input type="text" id="q" placeholder="検索したいワード" onkeyup="render()"></div>
 
 <!-- ===== 2カラム ===== -->
