--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
   body.dark  { background:#0f1115; color:#e8edf5; }
 
   /* ===== サイドバーしまう ===== */
-.sidebar-overlay {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: rgba(0,0,0,0.3);
-  z-index: 2000; /* サイドバーのすぐ下 */
-  display: none;
-}
-.sidebar-overlay.show {
-  display: block;
-}
-
+  .sidebar-overlay {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: 2000; /* サイドバーのすぐ下 */
+    display: none;
+  }
+  .sidebar-overlay.show { display: block; }
 
   /* ===== ヘッダー ===== */
   .topbar {
@@ -46,7 +43,9 @@
   #infoPanel { display:none; font-size:12px; margin:8px 16px; color:#556; }
   #filterPanel { margin:8px 16px; }
   #q {
-    width:60%; padding:6px; border:1px solid #cfd8e3; border-radius:6px;
+    width:300px;
+    max-width:60%;
+    padding:6px; border:1px solid #cfd8e3; border-radius:6px;
     font-size:13px; font-family:"Meiryo UI",sans-serif;
   }
   #q::placeholder { color:#999; font-style:italic; }
@@ -89,7 +88,10 @@
   .note-header { display:flex; align-items:center; gap:6px; }
   .note h3 { margin:0; font-size:15px; flex:1; }
   .note small { color:#6b7a90; font-size:12px; }
-  body.dark .note { background:#141925; border-color:#2a3140; color:#e8edf5; box-shadow:0 2px 8px rgba(0,0,0,.25); }
+  body.dark .note {
+    background:#141925; border-color:#2a3140; color:#e8edf5;
+    box-shadow:0 2px 8px rgba(0,0,0,.25);
+  }
 
   /* ===== PC用モーダル ===== */
   #dlg {
@@ -104,186 +106,131 @@
     padding:10px 14px; background:#4a90e2; color:#fff; border-radius:10px 10px 0 0;
     cursor:move; user-select:none; font-weight:bold;
   }
-  #dlg .content { padding:20px; }
+  #dlg .content { padding:20px; box-sizing:border-box; }
   #dlg input, #dlg textarea, #dlg select {
-    width:100%; margin-bottom:10px; padding:8px; border:1px solid #cfd8e3; border-radius:6px;
+    display:block;
+    width:100%; max-width:100%;
+    margin-bottom:12px; padding:8px;
+    border:1px solid #cfd8e3; border-radius:6px;
     font-size:13px; font-family:"Meiryo UI",sans-serif;
+    box-sizing:border-box;
   }
   .modal-footer { text-align:right; }
 
- /* ===== モバイル用エディタ ===== */
-.mobile-editor {
-  position: fixed;
-  top: 0;
-  left: 100%;
-  width: 100%;
-  height: 100%;
-  background: #fff;  /* 本文は白 */
-  transition: left 0.3s ease;
-  z-index: 3000;
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-}
-
-.mobile-editor.show { left: 0; }
-
-/* ヘッダー（青） */
-.mobile-editor .editor-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 12px;
-  background: #4a90e2;
-  color: #fff;
-  font-weight: bold;
-}
-
-.mobile-editor .editor-header button {
-  background: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 4px 8px;
-}
-
-/* 本文（白） */
-.mobile-editor .editor-content {
-  flex: 1;
-  padding: 16px;
-  overflow-y: auto;
-  background: #fff;  /* ここを明示 */
-  box-sizing: border-box;
-}
-
-.mobile-editor .editor-content input,
-.mobile-editor .editor-content textarea,
-.mobile-editor .editor-content select {
-  width: 100%;
-  margin-bottom: 12px;
-  padding: 10px;
-  border: 1px solid #cfd8e3;
-  border-radius: 6px;
-  font-size: 14px;
-  box-sizing: border-box;
-}
-
-/* ===== 入力欄の横幅統一 ===== */
-#dlg input, #dlg textarea, #dlg select,
-.mobile-editor .editor-content input,
-.mobile-editor .editor-content textarea,
-.mobile-editor .editor-content select {
-  display:block;
-  width:100%;
-  max-width:100%;
-  box-sizing:border-box;
-}
-
-/* ===== 検索ボックスの幅調整 ===== */
-#q {
-  width:300px;
-  max-width:60%;
-}
-@media screen and (max-width:600px) {
-  #q {
-    width:100%;
-    max-width:100%;
-    display:block;
-    margin:0 auto;
-  }
-}
-
-/* ===== モバイルでカテゴリ操作ボタンを大きく ===== */
-@media screen and (max-width:600px) {
-  .sidebar .edit-btn,
-  .sidebar .del-btn {
-    font-size:18px;
-    padding:4px;
-  }
-}
-
-
-/* ===== モバイルレイアウト調整 ===== */
-@media screen and (max-width:600px) {
-  /* サイドバーをスライドインに */
-  .sidebar {
+  /* ===== モバイル用エディタ ===== */
+  .mobile-editor {
     position: fixed;
-    left: -100%;
-    top: 0; bottom: 0;
-    width: 80%;
-    max-width: 280px;
+    top: 0; left: 100%;
+    width: 100%; height: 100%;
     background: #fff;
     transition: left 0.3s ease;
-    z-index: 2500;
-    box-shadow: 2px 0 8px rgba(0,0,0,.2);
+    z-index: 3000;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
   }
-  .sidebar.show { left: 0; }
+  .mobile-editor.show { left: 0; }
 
-  /* トップバーに≡ボタン */
-  .menu-toggle {
-    display:inline-block;
-    font-size:20px;
-    margin-right:10px;
-    cursor:pointer;
-  }
-
-  /* ノートリストをAppleメモ風に */
-  .note {
-    border: none;
-    border-bottom: 1px solid #ddd;
-    border-radius: 0;
+  .mobile-editor .editor-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 12px;
-    box-shadow: none;
-    background: transparent;
-  }
-  .note h3 { 
-    font-size: 16px; 
-    margin: 0 0 4px; 
+    background: #4a90e2;
+    color: #fff;
     font-weight: bold;
   }
-  .note small { 
-    display: block; 
-    color: #888; 
-    margin-bottom: 4px; 
-  }
-  .note p { 
-    font-size: 13px; 
-    color:#444; 
-    overflow:hidden; 
-    white-space:nowrap; 
-    text-overflow:ellipsis; 
-    margin:0;
+  .mobile-editor .editor-header button {
+    background: #fff; border: none; border-radius: 4px; padding: 4px 8px;
   }
 
-/* ===== モバイル新規ボタン ===== */
-.fab {
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  border: none;
-  background: #2a3a50 ;
-  color: #fff;
-  font-size: 28px;
-  font-weight: bold;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  cursor: pointer;
-  transition: background 0.3s;
-  z-index: 3000;
-}
-.fab:hover {
-  background: #a90e2; /* hover時に少し濃く */
-}
+  .mobile-editor .editor-content {
+    flex: 1; padding: 16px; overflow-y: auto;
+    background: #fff; box-sizing: border-box;
+  }
+  .mobile-editor .editor-content input,
+  .mobile-editor .editor-content textarea,
+  .mobile-editor .editor-content select {
+    display:block;
+    width:100%; max-width:100%;
+    margin-bottom:12px; padding:10px;
+    border:1px solid #cfd8e3; border-radius:6px;
+    font-size:14px; box-sizing:border-box;
+  }
 
-/* ===== はみ出し防止 ===== */
-.note, .mobile-editor, .editor-content,
-input, textarea, select {
-  box-sizing: border-box;
-  max-width: 100%;
-}
+  /* ===== 検索ボックスの幅調整 ===== */
+  @media screen and (max-width:600px) {
+    #q {
+      width:100%; max-width:100%;
+      display:block; margin:0 auto;
+    }
+  }
 
+  /* ===== モバイルでカテゴリ操作ボタンを大きく ===== */
+  @media screen and (max-width:600px) {
+    .sidebar .edit-btn,
+    .sidebar .del-btn {
+      font-size:18px;
+      padding:4px;
+    }
+  }
+
+  /* ===== モバイルレイアウト調整 ===== */
+  @media screen and (max-width:600px) {
+    .sidebar {
+      position: fixed;
+      left: -100%; top: 0; bottom: 0;
+      width: 80%; max-width: 280px;
+      background: #fff;
+      transition: left 0.3s ease;
+      z-index: 2500;
+      box-shadow: 2px 0 8px rgba(0,0,0,.2);
+    }
+    .sidebar.show { left: 0; }
+
+    .menu-toggle {
+      display:inline-block;
+      font-size:20px;
+      margin-right:10px;
+      cursor:pointer;
+    }
+
+    .note {
+      border:none; border-bottom:1px solid #ddd;
+      border-radius:0; padding:12px;
+      box-shadow:none; background:transparent;
+    }
+    .note h3 { font-size:16px; margin:0 0 4px; font-weight:bold; }
+    .note small { display:block; color:#888; margin-bottom:4px; }
+    .note p {
+      font-size:13px; color:#444;
+      overflow:hidden; white-space:nowrap;
+      text-overflow:ellipsis; margin:0;
+    }
+  }
+
+  /* ===== モバイル新規ボタン ===== */
+  .fab {
+    position: fixed;
+    bottom: 16px; right: 16px;
+    width: 56px; height: 56px;
+    border-radius: 50%; border: none;
+    background: #2a3a50; color: #fff;
+    font-size: 28px; font-weight: bold;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    cursor: pointer; transition: background 0.3s;
+    z-index: 3000;
+  }
+  .fab:hover { background: #a90e2; }
+
+  /* ===== はみ出し防止 ===== */
+  .note, .mobile-editor, .editor-content,
+  input, textarea, select {
+    box-sizing: border-box;
+    max-width: 100%;
+  }
 </style>
+
 </head>
 <body class="light">
 <!-- ===== Topbar ===== -->
